# agentcore-template

./: .gitignore  README.md  overview.md
agents/service-validation-agent/: Dockerfile  config.py  main.py  pyproject.toml  test.py  tools.py
agents/template/: main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/Chat/: ChatArea.tsx  ChatHeader.tsx  EmptyState.tsx  MessageBubble.tsx  MessageInput.tsx  TypingIndicator.tsx
frontend/src/components/Sidebar/: AgentCard.tsx  NewAgentModal.tsx  Sidebar.tsx
frontend/src/components/common/: ThemeToggle.tsx
frontend/src/hooks/: useAgents.ts  useMessages.ts  useTheme.ts  useThreads.ts
frontend/src/lib/: agentHealth.ts  agentIcons.ts  serviceValidationApi.ts  serviceValidationWs.ts  simpleMarkdown.tsx  supabase.ts
frontend/src/types/: index.ts
